--- a/styles/stylesheet.css
+++ b/styles/stylesheet.css
@@ -10,10 +10,12 @@
   }
 
   :root {
-    --font_headings-family: 'IBM Plex Mono', monospace;
-    --font_headings-size: 2.4rem; 
+    --font_principal-family: 'IBM Plex Mono', monospace;
+    --font_principal-size: 2.4rem; 
     --font_p-family: 'Roboto', sans-serif;
     --font_p-size: 1.8rem;
+    --font_quotes-family: 'Lumanosimo', cursive;
+    --font_quotes-size: 2.4rem;
   }
 
 .header {
@@ -28,7 +30,7 @@
   justify-content: center;
   overflow: hidden;
   object-fit: cover;
-  border-bottom: 2px solid black;
+  border-bottom: 2px solid rgb(61, 61, 61);
 }
 
 .header__r {
@@ -39,8 +41,8 @@
   text-align: center;
   display: flex;
   flex-direction: column;
-  font-size: var(--font_headings-size);
-  font-family: var(--font_headings-family);
+  font-size: var(--font_principal-size);
+  font-family: var(--font_principal-family);
   border-bottom: 2px solid black; 
 }
 
@@ -52,7 +54,7 @@
 }
 
 .content {
-background-color: rgb(240, 235, 240);
+background-color: rgb(240, 240, 240);
 font-family: var(--font_p-family);
 font-size: var(--font_p-size);
 padding: 1.8em 3.6rem;
@@ -61,4 +63,45 @@ padding: 1.8em 3.6rem;
 .content__text {
   padding-bottom: 1.8em;
 }
+
+.content__img1 {
+  width: 100%;
+  height: 33vh;
+  align-items: center;
+  justify-content: center;
+  overflow: hidden;
+  object-fit: cover;
+  padding-bottom: 1.8em;
+}
+
+.content__text-quotes {
+  font-family: var(--font_quotes-family);
+  font-size: var(--font_quotes-size);
+  padding-bottom: 1.8em;
+  text-align: center;
+  color:dimgray;
+}
+
+.footer {
+  background-color: black;
+  color: whitesmoke;
+  font-family: var(--font_principal-family);
+  font-size: 1.2rem;
+  display: flex;
+  flex-direction: rows;
+  justify-content:space-evenly;
+  align-items:self-start;
+}
+
+.footer__description-li {
+  padding: 0.6rem;
+  margin: 0.10rem;
+  list-style: none;
+}
+
+.footer__contact {
+  padding: 0.6rem;
+}
+
+
 
