--- a/styles/stylesheet.css
+++ b/styles/stylesheet.css
@@ -18,6 +18,7 @@
     --font_quotes-size: 2.4rem;
   }
 
+ 
 .header {
     display: flex;
     flex-direction: column;
@@ -81,6 +82,37 @@ padding: 1.8em 3.6rem;
   text-align: center;
   color:dimgray;
 }
+
+#processing_stars {
+  width: 100vw;
+  height: 25vh;
+  margin-bottom: 4rem;
+}
+
+.button__creatives {
+  font-family: var(--font_principal-family);
+  font-size: 16px;
+  letter-spacing: 2px;
+  text-decoration: none;
+  text-transform: uppercase;
+  color: #000;
+  cursor: pointer;
+  border: 3px solid;
+  padding: 0.25em 0.5em;
+  box-shadow: 1px 1px 0px 0px, 2px 2px 0px 0px, 3px 3px 0px 0px, 4px 4px 0px 0px, 5px 5px 0px 0px;
+  position: relative;
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+  text-align: center;
+}
+
+.button__creatives:active {
+  box-shadow: 0px 0px 0px 0px;
+  top: 5px;
+  left: 5px;
+}
+
 
 .footer {
   background-color: black;
