--- a/styles/stylesheet.css
+++ b/styles/stylesheet.css
@@ -1,78 +1,88 @@
 * {
-    box-sizing: border-box;
-    margin: 0;
-    padding: 0;
-  }
-
-  html {
-    font-size: 62.5%;
-    min-height: 100%;
-  }
+  margin: 0;
+  padding: 0;
+}
 
   :root {
     --font_principal-family: 'IBM Plex Mono', monospace;
-    --font_principal-size: 2.4rem; 
+    --font_principal-size: 1.8rem; 
     --font_p-family: 'Roboto', sans-serif;
-    --font_p-size: 1.8rem;
+    --font_p-size: 1.0rem;
     --font_quotes-family: 'Lumanosimo', cursive;
-    --font_quotes-size: 2.4rem;
+    --font_quotes-size: 1.8rem;
+    --cols: 1rem 5px auto 5px 1rem;
   }
 
- 
+  body {
+    display: grid;
+    grid-template-columns: var(--cols);
+    grid-template-rows: 80vh 1fr auto;
+    color: #333333;
+    background-color: rgb(250, 245, 240);
+    font-size: 62.5%;
+  }
+  
 .header {
-    display: flex;
-    flex-direction: column;
+  grid-column: 1 / -1;
+  background-color: white;
+ 
 } 
 
-.header__l {
+.header__img {
   width: 100%;
-  height: 40vh;
-  align-items: center;
-  justify-content: center;
+  height: 50%;
   overflow: hidden;
   object-fit: cover;
-  border-bottom: 2px solid rgb(61, 61, 61);
+  object-position: center;
+  
 }
 
-.header__r {
-  width: 100%;
-  height: 40vh;
-  align-items: center;
-  justify-content: center;
+.header__title {
+  height: 50%;
   text-align: center;
-  display: flex;
-  flex-direction: column;
+  align-items: center;
+  margin-left: 15%;
+  margin-right: 15%;
+  margin-top:5%;
   font-size: var(--font_principal-size);
   font-family: var(--font_principal-family);
-  border-bottom: 2px solid black; 
 }
 
-.header__r-sub {
-  font-family: var(--font_p-family);
-  font-size: 1.6rem;
-  display: flex;
-  flex-direction: column;
+.header__title-sub {
+  grid-column: 1 / -1;
+  font-family: var(--font_principal-family);
+  font-size: 0.9rem;
+   
 }
 
 .content {
+display: grid;
+grid-template-columns: var(--cols);
+grid-column: 1 / -1 ;
 background-color: rgb(240, 240, 240);
 font-family: var(--font_p-family);
 font-size: var(--font_p-size);
-padding: 1.8em 3.6rem;
 }
 
-.content__text {
+.content > p:first-child {
+  margin-top: 2rem;
+}
+
+
+.content__text  {
   padding-bottom: 1.8em;
+  grid-column: 3 / -3  ;
 }
 
 .content__img1 {
-  width: 100%;
   height: 33vh;
   align-items: center;
   justify-content: center;
   overflow: hidden;
   object-fit: cover;
   padding-bottom: 1.8em;
+  grid-column: 1 / -1;
+  width:100%;
 }
 
 .content__text-quotes {
@@ -81,12 +91,22 @@ padding: 1.8em 3.6rem;
   padding-bottom: 1.8em;
   text-align: center;
   color:dimgray;
+  grid-column: 3 / -3;
+ 
 }
 
+
+
 #processing_stars {
-  width: 100vw;
-  height: 25vh;
+  height: 33vh;
+  margin-bottom: 0.5rem;
+  grid-column: 2 / -2;
+}
+
+#slider__processing-container  {
   margin-bottom: 4rem;
+  grid-column: 2 / -2;
+  
 }
 
 .button__creatives {
@@ -105,24 +125,27 @@ padding: 1.8em 3.6rem;
   -webkit-user-select: none;
   touch-action: manipulation;
   text-align: center;
+  grid-column: 3 / -3;
+  margin-bottom: 2rem;
+  
 }
 
 .button__creatives:active {
   box-shadow: 0px 0px 0px 0px;
   top: 5px;
   left: 5px;
+  
 }
-
 
 .footer {
   background-color: black;
   color: whitesmoke;
   font-family: var(--font_principal-family);
   font-size: 1.2rem;
-  display: flex;
-  flex-direction: rows;
+  grid-column: 1 / -1;
   justify-content:space-evenly;
   align-items:self-start;
+ 
 }
 
 .footer__description-li {
