--- a/styles/stylesheet.css
+++ b/styles/stylesheet.css
@@ -1,16 +1,18 @@
 * {
   margin: 0;
   padding: 0;
+  box-sizing: border-box;
 }
 
   :root {
     --font_principal-family: 'IBM Plex Mono', monospace;
-    --font_principal-size: 1.8rem; 
+    --font_principal-size: 3rem; 
     --font_p-family: 'Roboto', sans-serif;
-    --font_p-size: 1.0rem;
+    --font_p-size: 1.8rem;
     --font_quotes-family: 'Lumanosimo', cursive;
-    --font_quotes-size: 1.8rem;
-    --cols: 1rem 5px auto 5px 1rem;
+    --font_quotes-size: 2rem;
+    --cols: 1rem 5px minmax(0, 1fr) 5px 1rem;
+    font-size: 62.5%;
   }
 
   body {
@@ -19,40 +21,40 @@
     grid-template-rows: 80vh 1fr auto;
     color: #333333;
     background-color: rgb(250, 245, 240);
-    font-size: 62.5%;
+    min-height: 100vh;
+    width: 100%;
   }
   
 .header {
   grid-column: 1 / -1;
   background-color: white;
- 
 } 
 
 .header__img {
   width: 100%;
   height: 50%;
-  overflow: hidden;
-  object-fit: cover;
-  object-position: center;
-  
+  overflow:hidden;
+  object-fit:fill;
+  object-position:center; 
 }
 
 .header__title {
-  height: 50%;
-  text-align: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: center; 
   align-items: center;
-  margin-left: 15%;
-  margin-right: 15%;
-  margin-top:5%;
+  width: 100%;
+  height: 50%;
+}
+.header__main-title {
   font-size: var(--font_principal-size);
   font-family: var(--font_principal-family);
 }
 
 .header__title-sub {
-  grid-column: 1 / -1;
+  padding-top: 1rem;
   font-family: var(--font_principal-family);
-  font-size: 0.9rem;
-   
+  font-size: 1.5rem;
 }
 
 .content {
@@ -62,6 +64,8 @@ grid-column: 1 / -1 ;
 background-color: rgb(240, 240, 240);
 font-family: var(--font_p-family);
 font-size: var(--font_p-size);
+margin: 0;
+padding: 0;
 }
 
 .content > p:first-child {
@@ -82,7 +86,8 @@ font-size: var(--font_p-size);
   object-fit: cover;
   padding-bottom: 1.8em;
   grid-column: 1 / -1;
-  width:100%;
+  width: 100%;
+ 
 }
 
 .content__text-quotes {
@@ -92,21 +97,18 @@ font-size: var(--font_p-size);
   text-align: center;
   color:dimgray;
   grid-column: 3 / -3;
- 
 }
-
-
 
 #processing_stars {
   height: 33vh;
   margin-bottom: 0.5rem;
-  grid-column: 2 / -2;
+  grid-column: 3 / -3;
+  width: 100%;
 }
 
 #slider__processing-container  {
   margin-bottom: 4rem;
-  grid-column: 2 / -2;
-  
+  grid-column: 3 / -3;
 }
 
 .button__creatives {
@@ -118,7 +120,6 @@ font-size: var(--font_p-size);
   color: #000;
   cursor: pointer;
   border: 3px solid;
-  padding: 0.25em 0.5em;
   box-shadow: 1px 1px 0px 0px, 2px 2px 0px 0px, 3px 3px 0px 0px, 4px 4px 0px 0px, 5px 5px 0px 0px;
   position: relative;
   user-select: none;
@@ -127,36 +128,43 @@ font-size: var(--font_p-size);
   text-align: center;
   grid-column: 3 / -3;
   margin-bottom: 2rem;
-  
 }
 
 .button__creatives:active {
   box-shadow: 0px 0px 0px 0px;
   top: 5px;
-  left: 5px;
-  
 }
 
 .footer {
+  display: flex;
+  flex-direction:row;
+  justify-content:space-around; 
+  align-items: center;
   background-color: black;
   color: whitesmoke;
   font-family: var(--font_principal-family);
-  font-size: 1.2rem;
+  font-size: 1.6rem;
   grid-column: 1 / -1;
-  justify-content:space-evenly;
   align-items:self-start;
- 
+  text-decoration: none;
 }
 
 .footer__description-li {
-  padding: 0.6rem;
-  margin: 0.10rem;
   list-style: none;
+  padding: 1rem 0rem 1rem 0;
 }
+ 
 
 .footer__contact {
-  padding: 0.6rem;
+  padding: 1rem 0rem 1rem 1rem;
 }
 
+a {
+  text-decoration: underline;
+  color:white
+}
 
-
+a:hover {
+  font-style: italic;
+  font-size: 1.8rem;
+}
