--- a/styles/stylesheet.css
+++ b/styles/stylesheet.css
@@ -89,7 +89,6 @@ line-height: var(--line-height-p);
   padding-bottom: 1.8em;
   grid-column: 1 / -1;
   width: 100%;
- 
 }
 
 .content__text-quotes {
@@ -133,6 +132,29 @@ line-height: var(--line-height-p);
   padding: 4px 0 4px 0; 
 }
 
+  input[type=range] {
+    height: 40px;
+    background-color: rgb(240, 240, 240);
+    -webkit-appearance: none;
+    margin: 10px 0;
+    width: 100%;
+  }
+
+  input[type=range]::-webkit-slider-runnable-track {
+    width: 100%;
+    height: 18px;
+    cursor: pointer;
+    border: 3px solid #8A8A8A;
+  }
+
+  input[type=range]::-webkit-slider-thumb {
+    height: 24px;
+    width: 35px;
+    background: rgb(51,51,51);
+    -webkit-appearance: none;
+    margin-top: -5px;
+  }
+  
 .button__creatives:active {
   box-shadow: 0px 0px 0px 0px;
   top: 5px;
