--- a/styles/creative_cards_stylesheet.css
+++ b/styles/creative_cards_stylesheet.css
@@ -107,7 +107,7 @@
     width: 100%;
     height: 100%;
     object-fit: fill;
-    object-position: center center;
+    object-position: center ;
   }
 
 
